--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cardápio da Pizzaria</h1>
+        <h1>Cardápio Casa da Pizza</h1>
         
         <h2>Pizzas Tradicionais</h2>
         <ul>
