--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li><span class="pizza-name">39. Geleia de Pimenta:</span> Presunto e muçarela com um toque sofisticado de geleia de pimenta e gorgonzola.</li>
             <li><span class="pizza-name">40. Naturalle:</span> Brócolis com palmito, finalizado com alho crocante.</li>
             <li><span class="pizza-name">41. Rúcula Especial:</span> Rúcula fresca sobre muçarela de búfala e gorgonzola, finalizada com mel e castanhas.</li>
-            <li><span class="pizza-name">42. Creme de Milho:</span> Creme de milho artesanal, frango temperado e muçarela com bata palha.</li>
+            <li><span class="pizza-name">42. Creme de Milho:</span> Creme de milho artesanal, frango temperado e muçarela com batata palha.</li>
         </ul>
         
         <h2>Pizzas Doces</h2>
