--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul>
             <li><span class="pizza-name">1. Alho e Óleo:</span> Muçarela, azeite e alho crocante, finalizado com um toque de orégano e azeitonas.</li>
             <li><span class="pizza-name">2. Abobrinha Especial:</span> Calabresa ralada, abobrinha e provolone sobre muçarela mucarela temperados com alho crocante e orégano.</li>
-            <li><span class="pizza-name">3. Atum:</span> Atum premium sobre uma base de muçarela derretida, com cebola, tomate e um toque especial de orégano.</li>
+            <li><span class="pizza-name">3. Atum:</span> Atum sobre uma base de muçarela, com cebola, tomate e orégano.</li>
             <li><span class="pizza-name">4. Aliche:</span> Muçarela e saborosas tiras de aliche, combinadas com orégano e azeitonas.</li>
             <li><span class="pizza-name">5. Baiana:</span> Calabresa finamente ralada com pimenta especial e cebola, sobre uma camada de muçarela e orégano.</li>
             <li><span class="pizza-name">6. Brócolis:</span>  Brócolis grelhado servido sobre muçarela, finalizado com alho crocante.</li>
@@ -69,8 +69,8 @@
             <li><span class="pizza-name">13. Frango:</span> Frango temperado com muçarela, tomate e orégano.</li>
             <li><span class="pizza-name">14. Frango Catupiry:</span> Clássica combinação de frango desfiado com Catupiry e toque de tomate e orégano.</li>
             <li><span class="pizza-name">15. Framilho:</span> Frango suculento com milho doce e bacon crocante.</li>
-            <li><span class="pizza-name">16. Gorgonzola:</span> Muçarela e gorgonzola derretidos, um toque sofisticado de orégano e azeitonas.</li>
-            <li><span class="pizza-name">17. Lombo Cremoso:</span> Lombo defumado coberto com uma cobertura de queijo cremoso.</li>
+            <li><span class="pizza-name">16. Gorgonzola:</span> Muçarela e gorgonzola, com orégano e azeitonas pretas.</li>
+            <li><span class="pizza-name">17. Lombo Cremoso:</span> Lombo defumado coberto com queijo cremoso.</li>
             <li><span class="pizza-name">18. Lombo:</span> Lombo defumado fatiado sobre muçarela com orégano.</li>
             <li><span class="pizza-name">19. Milho:</span> Milho salpicado com pedaços de bacon sobre muçarela.</li>
             <li><span class="pizza-name">20. Marguerita:</span> Tomate cereja fresco com manjericão e muçarela especial.</li>
@@ -79,7 +79,7 @@
             <li><span class="pizza-name">23. Napolitana:</span> Parmesão e tomate fresco sobre uma base cremosa de muçarela.</li>
             <li><span class="pizza-name">24. Palmito:</span> Palmito selecionado sobre muçarela, finalizado com tomate e orégano.</li>
             <li><span class="pizza-name">25. Pepperoni:</span> Pepperoni especial levemente picante sobre muçarela cremosa.</li>
-            <li><span class="pizza-name">26. Portuguesa:</span> Presunto fatiado, ovo, ervilhas, palmito e cebola sobre uma base de muçarela.</li>
+            <li><span class="pizza-name">26. Portuguesa:</span> Presunto, ovo, ervilhas, palmito e cebola sobre uma base de muçarela.</li>
             <li><span class="pizza-name">27. 3 Queijos:</span> Mistura equilibrada de muçarela, provolone e parmesão.</li>
             <li><span class="pizza-name">28. 4 Queijos:</span> Combinação irresistível de muçarela, provolone, parmesão e Catupiry.</li>
             <li><span class="pizza-name">29. Rúcula com Tomate Seco:</span> Rúcula fresca sobre muçarela, finalizada com tomate seco.</li>
@@ -88,9 +88,9 @@
         <h2>Pizzas Especiais</h2>
         <h5>Obs: Todas as pizzas são preparadas com molho de tomate artesanal preparado na casa</h5>
         <ul>
-            <li><span class="pizza-name">30. Tomates Confitados:</span> Tomates assados lentamente, combinados com parmesão e manjericão sobre muçarela.</li>
-            <li><span class="pizza-name">31. Caprese:</span> Muçarela de búfala, manjericão e molho pesto artesanal.</li>
-            <li><span class="pizza-name">32. Bonna:</span> Gorgonzola com figos laminados sobre muçarela.</li>
+            <li><span class="pizza-name">30. Tomates Confitados:</span> Queijo cremoso, tomates confitados finalizados com Parmesão, manjericão e toque final com castanhas.</li>
+            <li><span class="pizza-name">31. Caprese:</span> Muçarela de búfala, molho pesto artesanal e finalizado com castanhas.</li>
+            <li><span class="pizza-name">32. Bonna:</span> Combinação de gorgonzola com figos laminados e nozes sobre muçarela.</li>
             <li><span class="pizza-name">33. Champignon:</span> Cogumelos selecionados com parmesão e muçarela.</li>
             <li><span class="pizza-name">34. Fratello:</span> Pera fatiada, alho-poró e gorgonzola, finalizados com nozes crocantes.</li>
             <li><span class="pizza-name">35. Caponata Berinjela:</span> Caponata de berinjela com parmesão e nozes.</li>
@@ -100,7 +100,7 @@
             <li><span class="pizza-name">39. Geleia de Pimenta:</span> Presunto e muçarela com um toque sofisticado de geleia de pimenta e gorgonzola.</li>
             <li><span class="pizza-name">40. Naturalle:</span> Brócolis com palmito, finalizado com alho crocante.</li>
             <li><span class="pizza-name">41. Rúcula Especial:</span> Rúcula fresca sobre muçarela de búfala e gorgonzola, finalizada com mel e castanhas.</li>
-            <li><span class="pizza-name">42. Creme de Milho:</span> Creme de milho artesanal, frango temperado e muçarela com batata palha.</li>
+            <li><span class="pizza-name">42. Creme de Milho:</span> Muçarela, Creme de milho, frango temperado e finalizado com batata palha.</li>
         </ul>
         
         <h2>Pizzas Doces</h2>
