--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
         margin-right: 5px;
         box-shadow: 0px 2px 5px rgba(0, 128, 0, 0.2); /* Sombra verde clara */
       }
+      .pizza-description {
+        color: #555; /* Cinza suave */
+        font-size: 0.9em; /* Texto menor */
+        line-height: 1.4; /* Melhor espaçamento */
+        display: block; /* Garante que fique em uma nova linha */
+        margin-top: 5px; /* Espaço entre o nome e a descrição */
+      }
     </style>
   </head>
   <body>
@@ -107,126 +114,124 @@
       </h5>
       <ul>
         <li>
-          <span class="pizza-name">1. Alho e Óleo:</span> Muçarela, azeite e
-          alho crocante, finalizado com um toque de orégano e azeitonas.
+          <span class="pizza-name">1. Alho e Óleo</span> 
+          <span class="pizza-description">Muçarela, azeite e alho crocante, finalizado com um toque de orégano e azeitonas.</span>
         </li>
         <li>
-          <span class="pizza-name">2. Abobrinha Especial:</span> Calabresa
-          ralada, abobrinha e provolone sobre muçarela temperados com alho
-          crocante e orégano.
+          <span class="pizza-name">2. Abobrinha Especial</span> 
+          <span class="pizza-description">Calabresa ralada, abobrinha e provolone sobre muçarela temperados com alho crocante e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">3. Atum:</span> Atum sobre uma base de
-          muçarela, com cebola, tomate e orégano.
+          <span class="pizza-name">3. Atum</span> 
+          <span class="pizza-description">Atum sobre uma base de muçarela, com cebola, tomate e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">4. Aliche:</span> Muçarela e saborosas tiras
-          de aliche, combinadas com orégano e azeitonas.
+          <span class="pizza-name">4. Aliche</span> 
+          <span class="pizza-description">Muçarela e saborosas tiras de aliche, combinadas com orégano e azeitonas.</span>
         </li>
         <li>
-          <span class="pizza-name">5. Baiana:</span> Calabresa ralada com
-          pimenta, cebola, sobre uma camada de muçarela e orégano.
+          <span class="pizza-name">5. Baiana</span> 
+          <span class="pizza-description">Calabresa ralada com pimenta, cebola, sobre uma camada de muçarela e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">6. Brócolis:</span> Brócolis grelhado servido
-          sobre muçarela, finalizado com alho crocante.
+          <span class="pizza-name">6. Brócolis</span> 
+          <span class="pizza-description">Brócolis grelhado servido sobre muçarela, finalizado com alho crocante.</span>
         </li>
         <li>
-          <span class="pizza-name">7. Calabresa:</span> Generosas fatias de
-          calabresa com cebola e orégano sobre muçarela.
+          <span class="pizza-name">7. Calabresa</span> 
+          <span class="pizza-description">Generosas fatias de calabresa com cebola e orégano sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">8. Carne de Sol:</span> Combinação de Carne
-          de sol e cebola sobre muçarela.
+          <span class="pizza-name">8. Carne de Sol</span> 
+          <span class="pizza-description">Combinação de Carne de sol e cebola sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">9. Escarola:</span> Escarola refogada com
-          bacon crocante, alho e muçarela.
+          <span class="pizza-name">9. Escarola</span> 
+          <span class="pizza-description">Escarola refogada com bacon crocante, alho e muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">10. Romana:</span> Combinação de atum,
-          palmito, ovo e bacon sobre uma base de muçarela.
+          <span class="pizza-name">10. Romana</span> 
+          <span class="pizza-description">Combinação de atum,  palmito, ovo e bacon sobre uma base de muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">11. Strogonoff:</span> Strogonoff de carne
-          sobre muçarela e finalizado com batata palha.
+          <span class="pizza-name">11. Strogonoff</span> 
+          <span class="pizza-description">Strogonoff de carne sobre muçarela e finalizado com batata palha.</span>
         </li>
         <li>
-          <span class="pizza-name">12. File Master:</span> Filé mignon grelhado
-          com tomates frescos e cebola (opção com Catupiry).
+          <span class="pizza-name">12. File Master</span> 
+          <span class="pizza-description">Filé mignon grelhado com tomates frescos e cebola (opção com Catupiry).</span>
         </li>
         <li>
-          <span class="pizza-name">13. Frango:</span> Frango temperado com
-          muçarela, tomate e orégano.
+          <span class="pizza-name">13. Frango</span> 
+          <span class="pizza-description">Frango temperado com muçarela, tomate e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">14. Frango Catupiry:</span> Clássica
-          combinação de frango desfiado com Catupiry e tomate e orégano.
+          <span class="pizza-name">14. Frango Catupiry</span> 
+          <span class="pizza-description">Clássica combinação de frango desfiado com Catupiry e tomate e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">15. Framilho:</span> Frango com milho e bacon
-          crocante sobre muçarela.
+          <span class="pizza-name">15. Framilho</span> 
+          <span class="pizza-description">Frango com milho e bacon crocante sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">16. Gorgonzola:</span> Combinação de muçarela
-          e gorgonzola, com orégano e azeitonas pretas.
+          <span class="pizza-name">16. Gorgonzola</span> 
+          <span class="pizza-description">Combinação de muçarela e gorgonzola, com orégano e azeitonas pretas.</span>
         </li>
         <li>
-          <span class="pizza-name">17. Lombo Cremoso:</span> Lombo defumado
-          coberto com queijo cremoso sobre muçarela.
+          <span class="pizza-name">17. Lombo Cremoso</span> 
+          <span class="pizza-description">Lombo defumado coberto com queijo cremoso sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">18. Lombo:</span> Lombo defumado fatiado
-          sobre muçarela com orégano.
+          <span class="pizza-name">18. Lombo</span> 
+          <span class="pizza-description">Lombo defumado fatiado sobre muçarela com orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">19. Lombo Catupiry:</span> Lombo defumado
-          fatiado com Catupiry sobre muçarela com orégano.
+          <span class="pizza-name">19. Lombo Catupiry</span> 
+          <span class="pizza-description">Lombo defumado fatiado com Catupiry sobre muçarela com orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">20. Milho:</span> Milho salpicado com pedaços
-          de bacon sobre muçarela.
+          <span class="pizza-name">20. Milho</span> 
+          <span class="pizza-description">Milho salpicado com pedaços de bacon sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">21. Marguerita:</span> Tomate cereja fresco
-          com manjericão e muçarela especial.
+          <span class="pizza-name">21. Marguerita</span> 
+          <span class="pizza-description">Tomate cereja fresco com manjericão e muçarela especial.</span>
         </li>
         <li>
-          <span class="pizza-name">22. Mineira:</span> Lombo defumado,
-          calabresa, bacon crocante e cebola, sobre uma camada de muçarela e
-          orégano.
+          <span class="pizza-name">22. Mineira</span> 
+          <span class="pizza-description">Lombo defumado, calabresa, bacon crocante e cebola, sobre uma camada de muçarela e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">23. Muçarela:</span> A clássica combinação de
-          muçarela derretida, tomate e orégano.
+          <span class="pizza-name">23. Muçarela</span> 
+          <span class="pizza-description">A clássica combinação de muçarela derretida, tomate e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">24. Napolitana:</span> Parmesão e tomate
-          fresco sobre uma base de muçarela.
+          <span class="pizza-name">24. Napolitana</span> 
+          <span class="pizza-description">Parmesão e tomate fresco sobre uma base de muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">25. Palmito:</span> Palmito selecionado sobre
-          muçarela, finalizado com tomate e orégano.
+          <span class="pizza-name">25. Palmito</span> 
+          <span class="pizza-description">Palmito selecionado sobre muçarela, finalizado com tomate e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">26. Pepperoni:</span> Pepperoni especial
-          levemente picante sobre muçarela e orégano.
+          <span class="pizza-name">26. Pepperoni</span> 
+          <span class="pizza-description">Pepperoni especial levemente picante sobre muçarela e orégano.</span>
         </li>
         <li>
-          <span class="pizza-name">27. Portuguesa:</span> Presunto, ovo,
-          ervilhas, palmito e cebola sobre uma base de muçarela.
+          <span class="pizza-name">27. Portuguesa</span> 
+          <span class="pizza-description">Presunto, ovo, ervilhas, palmito e cebola sobre uma base de muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">28. 3 Queijos:</span> Mistura equilibrada de
-          muçarela, provolone e parmesão.
+          <span class="pizza-name">28. 3 Queijos</span> 
+          <span class="pizza-description">Mistura equilibrada de muçarela, provolone e parmesão.</span>
         </li>
         <li>
-          <span class="pizza-name">29. 4 Queijos:</span> Combinação irresistível
-          de muçarela, provolone, parmesão e Catupiry.
+          <span class="pizza-name">29. 4 Queijos</span> 
+          <span class="pizza-description">Combinação irresistível de muçarela, provolone, parmesão e Catupiry.</span>
         </li>
         <li>
-          <span class="pizza-name">30. Rúcula com Tomate Seco:</span> Rúcula
-          fresca sobre muçarela, finalizada com tomate seco.
+          <span class="pizza-name">30. Rúcula com Tomate Seco</span> 
+          <span class="pizza-description">Rúcula fresca sobre muçarela, finalizada com tomate seco.</span>
         </li>
       </ul>
 
@@ -238,75 +243,73 @@
       <ul>
         <li>
           <span class="new-item">Novidade!</span
-          ><span class="pizza-name">31. Tomates Confitados:</span> Queijo
-          cremoso, tomates confitados com Parmesão, manjericão e toque final com
-          castanhas.
+          ><span class="pizza-name">31. Tomates Confitados</span> 
+          <span class="pizza-description">Queijo cremoso, tomates confitados com parmesão, manjericão e toque final de castanhas.</span>
         </li>
         <li>
           <span class="new-item">Novidade!</span
-          ><span class="pizza-name">32. Caponata Berinjela:</span> Caponata de
-          berinjela com parmesão e nozes sobre muçarela.
+          ><span class="pizza-name">32. Caponata Berinjela</span> 
+          <span class="pizza-description">Caponata de berinjela com parmesão e nozes sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">33. Caprese:</span> Muçarela de búfala, molho
-          pesto artesanal e finalizado com castanhas.
+          <span class="pizza-name">33. Caprese</span> 
+          <span class="pizza-description">Muçarela de búfala, molho pesto artesanal e finalizado com castanhas.</span>
         </li>
         <li>
-          <span class="pizza-name">34. Bonna:</span> Combinação de gorgonzola
-          com figos laminados e nozes sobre muçarela.
+          <span class="pizza-name">34. Bonna</span> 
+          <span class="pizza-description">Combinação de gorgonzola com figos laminados e nozes sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">35. Champignon:</span> Cogumelos selecionados
-          com parmesão e muçarela.
+          <span class="pizza-name">35. Champignon</span> 
+          <span class="pizza-description">Cogumelos selecionados com parmesão e muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">36. Fratello:</span> Pera fatiada, alho-poró
-          e gorgonzola, finalizados com nozes crocantes sobre muçarela.
+          <span class="pizza-name">36. Fratello</span> 
+          <span class="pizza-description">Pera fatiada, alho-poró e gorgonzola, finalizados com nozes crocantes sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">37. Capadócia:</span> Peito de peru fatiado
-          com alho-poró e cream cheese sobre muçarela.
+          <span class="pizza-name">37. Capadócia</span> 
+          <span class="pizza-description">Peito de peru fatiado com alho-poró e cream cheese sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">38. Fiorella:</span> Palmito nobre e pimenta
-          biquinho sobre muçarela.
+          <span class="pizza-name">38. Fiorella</span> 
+          <span class="pizza-description">Palmito nobre e pimenta biquinho sobre muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">39. Capriccio:</span> Lombo defumado,
-          alho-poró e gorgonzola com um toque cremoso de Catupiry sobre
-          muçarela.
+          <span class="pizza-name">39. Capriccio</span> 
+          <span class="pizza-description">Lombo defumado, alho-poró e gorgonzola com um toque cremoso de Catupiry sobre  muçarela.</span>
         </li>
         <li>
-          <span class="pizza-name">40. Geleia de Pimenta:</span> Presunto e
-          muçarela com um toque sofisticado de geleia de pimenta e gorgonzola.
+          <span class="pizza-name">40. Geleia de Pimenta</span> 
+          <span class="pizza-description">Presunto e muçarela com um toque sofisticado de geleia de pimenta e gorgonzola.</span>
         </li>
         <li>
-          <span class="pizza-name">41. Naturalle:</span> Brócolis com palmito e
-          muçarela, finalizado com alho crocante.
+          <span class="pizza-name">41. Naturalle</span> 
+          <span class="pizza-description">Brócolis com palmito e muçarela, finalizado com alho crocante.</span>
         </li>
         <li>
-          <span class="pizza-name">42. Rúcula Especial:</span> Rúcula fresca
-          sobre muçarela de búfala e gorgonzola, finalizada com mel e castanhas.
+          <span class="pizza-name">42. Rúcula Especial</span> 
+          <span class="pizza-description">Rúcula fresca sobre muçarela de búfala e gorgonzola, finalizada com mel e castanhas.</span>
         </li>
         <li>
-          <span class="pizza-name">43. Creme de Milho:</span> Muçarela, creme de
-          milho, frango temperado e finalizado com batata palha.
+          <span class="pizza-name">43. Creme de Milho</span> 
+          <span class="pizza-description">Muçarela, creme de milho, frango temperado e finalizado com batata palha.</span>
         </li>
       </ul>
 
       <h2>Pizzas Doces</h2>
       <ul>
         <li>
-          <span class="pizza-name">44. Banana com Canela:</span> Tradicional
-          combinação de banana e canela.
+          <span class="pizza-name">44. Banana com Canela</span> 
+          <span class="pizza-description">Tradicional combinação de banana e canela.</span>
         </li>
         <li>
-          <span class="pizza-name">45. Banoffee:</span> Banana, chocolate branco
-          e catupiry gratinado.
+          <span class="pizza-name">45. Banoffee</span> 
+          <span class="pizza-description">Banana, chocolate branco e catupiry gratinado.</span>
         </li>
         <li>
-          <span class="pizza-name">46. Charge:</span> Chocolate, amendoim e doce
-          de leite.
+          <span class="pizza-name">46. Charge</span> 
+          <span class="pizza-description">Chocolate, amendoim e doce de leite.</span>
         </li>
       </ul>
     </div>
