--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <span class="pizza-name">12. File Master</span>
           <span class="pizza-price">R$ 89,00</span>
           <span class="pizza-description"
-            >Filé mignon grelhado com tomates frescos e cebola (opção com
+            >Filé mignon grelhado com mussarela (opção com
             Catupiry).</span
           >
         </li>
