--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Cardápio - Pizzaria</title>
     <style>
+      h1 {
+        color: #b71c1c; /* Vermelho mais escuro */
+        font-size: 2.5em; /* Tamanho maior */
+        margin-bottom: 10px;
+        text-align: center; /* Centraliza o texto */
+      }
       h2 {
         position: relative;
       }
@@ -112,7 +118,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Cardápio Casa da Pizza</h1>
+      <h1>Casa da Pizza</h1>
       <h2>Pizzas Tradicionais</h2>
       <h5>
         Obs: Todas as pizzas são preparadas com molho de tomate artesanal
